Switch to cxf-xjc-plugin for schema compilation